tests/snapshots/run_wpt_conformance__onnx_greater_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 0D scalar",
    "onnx",
    "PASS",
)
