tests/snapshots/run_wpt_conformance__onnx_greater_float16_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float16 3D tensors",
    "onnx",
    "PASS",
)
